# xous-core

./: Cargo.toml
apps/: manifest.json
apps/memo/: Cargo.toml
apps/memo/locales/: i18n.json
apps/memo/src/: main.rs
xtask/src/: main.rs
